# puristaa

./: .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  SECURITY.md  SUPPORT.md  __main__.py  baseline-bandit.json  mkdocs.yml  puristaa.ABOUT  pyproject.toml  requirements.txt  sbom.json  sbom.json.sha256  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml
docs/: SUMMARY.md  book.toml  changes.md  index.md  install.md  test-coverage.md  usage.md  use.md
etc/: baseline-bandit.json  coverage-totals.json  git-stats.json  mkdocs.yml  monthly-downloads.json  packaging-facts.json  third-party-fallbacks.yml  yearly-commits.json
etc/sbom/: cdx.json  cdx.json.blake3  cdx.json.entropy  cdx.json.sha256  cdx.json.tlsh  spdx.json  spdx.json.blake3  spdx.json.entropy  spdx.json.sha256  spdx.json.tlsh  spdx.spdx  spdx.spdx.blake3  spdx.spdx.entropy  spdx.spdx.sha256  spdx.spdx.tlsh  spdx.yaml  spdx.yaml.blake3  spdx.yaml.entropy  spdx.yaml.sha256  spdx.yaml.tlsh
prefix_compression/: __main__.py  cli.py  prefix_compression.py
puristaa/: __init__.py  __main__.py  cli.py  puristaa.py
sbom/: cdx.json  cdx.json.blake3  cdx.json.entropy  cdx.json.sha256  cdx.json.tlsh  spdx.json  spdx.json.blake3  spdx.json.entropy  spdx.json.sha256  spdx.json.tlsh  spdx.spdx  spdx.spdx.blake3  spdx.spdx.entropy  spdx.spdx.sha256  spdx.spdx.tlsh  spdx.yaml  spdx.yaml.blake3  spdx.yaml.entropy  spdx.yaml.sha256  spdx.yaml.tlsh
test/: __init__.py  test_cli.py
tests/: __init__.py  prefix_compression_test.py  test_cli.py  test_prefix_compression.py  test_puristaa.py
